# celstate

./: .env.example  .gitignore  .jscpd.json  .replit  .vercelignore  AGENT-1-FRONTEND.md  AGENT-2-BACKEND.md  AGENTS.md  BUG.md  Deployment.md  PHASE1.5.md  PHASE1.md  PLAN.md  README.md  convex.json  eslint.config.js  generateKeys.mjs  implementation_plan.md  knip.json  next_steps.md  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md  requirements.txt  skills-lock.json  svelte.config.js  troubleshoot-login.md  tsconfig.json  update_plan.md  vite.config.ts
.agent/tools/: media_engine.py  media_generator.py  media_processor.py
.agent/workflows/: create-asset.md
.cursor/: settings.json
.cursor/plans/: alpha_compiler_v6_88730d5d.plan.md  ops_investigation_cli_10548dae.plan.md
.cursor/rules/: agent-execution.mdc
.github/workflows/: auth-canary.yml  ci.yml  production-verification.yml
archive/: project-specs.md
bundles/: README.md
business-plan/: ADVICE.md  DEFENSIBILITY.md  FULL.md  ROADMAP.md  VISION.md
convex/: assets.ts  jobs.ts  schema.ts
docs/: README.md  VISION.md  auth-setup.md  diffDIS_audit.md  diffDIS_plan.md  diffDIS_plan_agent1_integration.md  diffDIS_plan_agent2_verification.md  diffDIS_verification.md  interface_contract.md
e2e/: marketing-landing.spec.ts
experiments/: README.md  workflow_api_00000000-0000-0000-0000-000000001295.json
landing/: README.md  index.html
patches/: @convex-dev__better-auth@0.11.1.patch  @sveltejs__adapter-vercel@6.3.3.patch
report/: jscpd-report.json
scripts/: animation-worker-report.ts  animation-worker.ts  auth-canary-probe.mjs  auth-canary-probe.test.ts  build_static.mjs  capture-storage-state.mjs  check-auth-health.mjs  check-kit-server-env.ts  check-local-convex-auth.ts  check-public-env.ts  check-stripe-env.ts  debug_pipeline.py  diagnose-auth-state.mjs  diffdis_benchmark.py  experiment_dual_pass_video.py  growth-ops.ts  production-verification.ts  release-production.mjs  test-auth-contract.ts  transparent-animation-spike.ts  verify-doppler-kit-env.mjs  verify_changes.py
src/: app.css  app.d.ts  app.html  hooks.client.ts  hooks.server.ts  instrumentation.server.ts  mcp_server.py
tests/: debug_container.py  test_analyzer.py  test_interpreter.py  test_orchestrator_types.py  test_snippets.py  test_tracer.py  verify_container_fix.py  verify_cropping.py  verify_error_handling.py  verify_prompts.py  verify_refactor.py
web/: .env.local.example  index.html  package-lock.json  package.json  vite.config.ts
web-client/: package-lock.json  package.json  vite.config.ts
(+541 files in other folders)
